--- a/front/src/index.css
+++ b/front/src/index.css
@@ -20,7 +20,18 @@ body,
     pointer-events: none; /* 클릭 이벤트 비활성화 : 마우스가 더 이상 작동X */
     font-family: 'Bebas Neue', cursive;
 }
+.lapse{
 
+    width : 100px;
+    height: 80px;
+    color : #ffffff;
+    font-size : 3rem;
+    background : #00000033;
+    margin : 5px 5px;
+    text-align: center;
+    position: absolute;
+    padding-top : 20px;
+}
 .time{
     position: absolute;
     top: 15%;
