타이머 버그 수정 및 css 추가

--- a/front/src/index.css
+++ b/front/src/index.css
@@ -98,3 +98,16 @@ body,
 {
     background: #ffffff99;
 }
+
+.countdown
+{
+    position: absolute;
+    top: 15%;
+    left: 0;
+    width: 100%;
+    color: #ffffff;
+    font-size: 6vh;
+    background: #00000033;
+    padding-top: 5px;
+    text-align: center;
+}
