--- a/front/src/index.css
+++ b/front/src/index.css
@@ -122,3 +122,13 @@ body,
     padding-top: 5px;
     text-align: center;
 }
+
+.crash {
+  position: fixed;
+  top: 50%; /* 이미지를 수직으로 중앙에 배치 */
+  left: 50%; /* 이미지를 수평으로 중앙에 배치 */
+  transform: translate(-50%, -50%); /* 이미지를 정확히 가운데로 이동 */
+  width: 600px; /* 이미지의 너비 */
+  height: auto; /* 높이 자동 조정 */
+  z-index: 9999; /* 다른 요소들보다 위로 올리기 */
+}
