--- a/front/src/index.css
+++ b/front/src/index.css
@@ -17,7 +17,7 @@ body,
     left: 0;
     width: 100%;
     height: 100%;
-    pointer-events: none; /* 클릭 이벤트 비활성화 : 마우스가 더 이상 작동X */
+    /* pointer-events: none; 클릭 이벤트 비활성화 : 마우스가 더 이상 작동X */
     font-family: 'Bebas Neue', cursive;
 }
 .lapse{
