--- a/front/src/lobby/lobby.module.css
+++ b/front/src/lobby/lobby.module.css
@@ -1,4 +1,4 @@
-.lobby-container{
+.lobby_container{
   margin-top: 100px;
 }
 /* 000님 환영합니다. */
@@ -6,6 +6,7 @@
   font-size: 20px;
   margin-bottom: 12px;
   text-align: right;
+  margin-right: 90px;
 }
 
 /* 네모 박스 */
@@ -24,44 +25,53 @@
   display: flex;
 } */
 /* 왼쪽 구역 */
-.left-area{
+.left_area{
   width: 100%;
   height: 450px;
 }
-/* 조작감 만지는 곳 */
-.control-area{
+/* 랭킹 */
+.ranking_area{
   width: 100%;
-  height: 300px;
-  margin-left: 1px;
-}
+  height: 150px;
 
-.ranking-area{
+  border-radius: 10px;
+  flex: 1; /* 자유 공간을 다 차지하도록 확장 */
+  overflow-y: auto;
+  overflow-x: hidden;
+  background-color: rgba(255, 255, 255, 0.7);
+  scrollbar-color: lightgray white;
+  scrollbar-width: thin;
+  margin-bottom: 7px;
+}
+/* 조작법 */
+.control_area{
   width: 100%;
-  height: 130px;
-  margin-top: 10px;
+  height: 210px;
+  border-radius: 10px;
+  background-color: rgba(255, 255, 255, 0.7);
+  text-align: left;
 }
 
 /* 오른쪽 구역 */
-.right-area{
+.right_area{
   width: 100%;
   height: 450px;
-  
 }
-
-.room-area{
+/* 방있는 곳 */
+.room_area{
   border-radius: 10px;
   flex: 1; /* 자유 공간을 다 차지하도록 확장 */
   font-size: 30px;
   padding: 0 0 10px 20px;
   overflow-y: auto;
   overflow-x: hidden;
-  height: 370px; /* 내용이 들어갔을 때 최대 높이 제한 */
+  height: 340px; /* 내용이 들어갔을 때 최대 높이 제한 */
   background-color: rgba(255, 255, 255, 0.7);
   scrollbar-color: lightgray white;
   scrollbar-width: thin;
 }
 
-.room-item{
+.room_item{
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -70,7 +80,7 @@
 }
 
 /* 방들 */
-.players-room{
+.players_room{
   width: 100%;
   height: 100%;
   font-size: 30px;
@@ -79,19 +89,36 @@
 }
 
 /* 방만들기 버튼 */
-.create-room-area{
+.create_room_area{
   width: 100%;
   height: 50px;
   margin-top: 10px;
 }
 
-.create-room{
+.create_room{
   width: 100%;
   height: 50px;
 }
 
 
-.join-btn{
+.join_btn{
   width: 100%;
   height: 100%;
+}
+
+
+/* button */
+.keyboard{
+  border: 1px solid gray;
+  padding: 5px;
+  border-radius: 5px;
+  margin: 10px;
+  margin-left: 20px;
+  background-color: #E6E6E6;
+}
+
+.key{
+  width: 100px;
+  margin-top: -140px;
+  margin-left: 110px;
 }
