--- a/front/src/lobby/login.module.css
+++ b/front/src/lobby/login.module.css
@@ -4,7 +4,7 @@
   margin-bottom: 30px;
 }
 
-.title-text{
+.title_text{
   font-size: 160px;
 }
 
@@ -15,7 +15,7 @@
   height: 250px;
 }
 
-.inside-contents {
+.inside_contents {
   
   width: 50%; /* 테두리의 너비를 조정합니다. */
   margin: 0 auto; /* 테두리를 수평 가운데 정렬합니다. */
@@ -32,20 +32,20 @@
 }
 
 /* 로그인하여 게임 시작! */
-.center-text{
+.center_text{
   margin-top: 10px;
   font-size: 20px;
 }
 
 /* 로그인 요소들 */
-.login-area{
+.login_area{
   margin-top: 40px;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 /* 구글 네이버 버튼 */
-.google-btn{
+.google_btn{
   background: white;
           color: black;
           width: 350px;
@@ -60,17 +60,17 @@
           color:rgb(66,67,68);
 }
 
-.google-btn span{
+.google_btn span{
   margin-left: 30px;
   font-size: 16px;
 }
 
-.google-btn:hover {
+.google_btn:hover {
   background: rgb(247,247,247);
   color: black;
 }
 
-.naver-btn{
+.naver_btn{
   background: #03C75A;
           color: black;
           width: 350px;
@@ -85,17 +85,17 @@
           color:rgb(66,67,68);
 }
 
-.naver-btn span{
+.naver_btn span{
   margin-left: 30px;
   font-size: 16px;
   color: white;
 }
 
-.naver-btn:hover {
+.naver_btn:hover {
   background: rgb(3,195,90);
   color: black;
 }
 
-.google-btn, .naver-btn{
+.google_btn, .naver_btn{
   margin: 10px;
 }
