--- a/front/src/lobby/login.module.css
+++ b/front/src/lobby/login.module.css
@@ -1,3 +1,17 @@
+@font-face {
+  font-family: 'CookieRun_Black'; /* 사용할 폰트 이름 */
+  src: url('/public/assets/fonts/CookieRun_Black.ttf') format('truetype'); /* 폰트 파일의 경로 */
+}
+@font-face {
+  font-family: 'CookieRun_Bold'; /* 사용할 폰트 이름 */
+  src: url('/public/assets/fonts/CookieRun_Bold.ttf') format('truetype'); /* 폰트 파일의 경로 */
+}
+
+@font-face {
+  font-family: 'CookieRun_Regular'; /* 사용할 폰트 이름 */
+  src: url('/public/assets/fonts/CookieRun_Regular.ttf') format('truetype'); /* 폰트 파일의 경로 */
+}
+
 .title{
   margin-top: 50px;
   text-align: center;
@@ -34,7 +48,8 @@
 /* 로그인하여 게임 시작! */
 .center_text{
   margin-top: 10px;
-  font-size: 20px;
+  font-size: 26px;
+  font-family: 'CookieRun_Regular';
 }
 
 /* 로그인 요소들 */
