--- a/front/src/index.css
+++ b/front/src/index.css
@@ -12,7 +12,8 @@ body,
     left: 0;
     width: 100%;
     height: 100%;
-    background: white;
+    background: linear-gradient(#abdbe3, #f9e09b);
+    
 }
 .loadingPage {
     position: fixed;
