--- a/front/src/lobby/lobby.module.css
+++ b/front/src/lobby/lobby.module.css
@@ -15,6 +15,13 @@
 .lobby_container{
   margin-top: 100px;
 }
+
+.lobby_name{
+  margin-right: 460px;
+  font-size: 48px;
+  font-family: 'CookieRun_Bold'; 
+}
+
 /* 000님 환영합니다. */
 .welcome{
   font-size: 20px;
@@ -24,6 +31,43 @@
   font-family: 'CookieRun_Regular';
 }
 
+/* 로그아웃 버튼 */
+/* .logout_btn{
+  background-color: #003D6B;
+  border-radius: 5px;
+} */
+
+.logout_btn {
+  background: #ffb344;
+  box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0.5);
+  border-radius: 5px;
+  border: none;
+  color: white;
+}
+
+.logout_btn:before {
+  content: '로그아웃';
+  display: block;
+  /* position: absolute; */
+  top: 0;
+  left: 0;
+  width: 100px;
+  height: 40px;
+  border-radius: 5px;
+  transition: all 0.2s ;
+}
+.logout_btn:before {
+  box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0.4);
+  line-height: 37px;
+}
+
+.logout_btn:hover:before {
+  margin-left: 0px;
+  transform: scale(1.1,1.1);
+  -ms-transform: scale(1.1,1.1);
+  -webkit-transform: scale(1.1,1.1);
+  box-shadow: 0px 0px 0px -2px rgba(0, 0, 0, 0.25);
+}
 /* 네모 박스 */
 .lobby{
   margin: 0 auto;
@@ -32,7 +76,7 @@
   text-align: center;
   border-radius: 10px;
   padding: 50px 80px 50px 80px;
-  height: 530px;
+  height: 600px;
   background-color: rgba(255, 255, 255, 0.5);
 }
 
@@ -47,14 +91,21 @@
 .left_area{
   width: 100%;
   height: 450px;
+  margin-top: 20px;
 }
+
+/* 오른쪽 구역 */
+.right_area{
+  width: 100%;
+  height: 450px;
+  margin-top: 20px;
+}
+
 /* 랭킹 */
 .ranking_area{
-  width: 100%;
   height: 150px;
 
   border-radius: 10px;
-  flex: 1; /* 자유 공간을 다 차지하도록 확장 */
   overflow-y: auto;
   overflow-x: hidden;
   background-color: rgba(255, 255, 255, 0.7);
@@ -73,11 +124,6 @@
   font-family: 'CookieRun_Regular'
 }
 
-/* 오른쪽 구역 */
-.right_area{
-  width: 100%;
-  height: 450px;
-}
 /* 방있는 곳 */
 .room_area{
   border-radius: 10px;
@@ -121,15 +167,84 @@
   height: 50px;
   font-family: 'CookieRun_Bold';
   font-size: 24px;
+  background-color: #0888A1;
+  border-radius: 5px;
 }
 
+.create_room {
+  box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0.5);
+  border: none;
+  color: white;
+}
 
+.create_room:before {
+  content: '방 만들기';
+  display: block;
+  top: 0;
+  left: 0;
+  width: 250px;
+  height: 40px;
+  border-radius: 5px;
+  transition: all 0.2s;
+  margin-left: 20px;
+}
+.create_room:before {
+  box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0.4);
+  line-height: 37px;
+  margin-left: 10px;
+}
+
+.create_room:hover:before {
+  transform: scale(1.1,1.1);
+  -ms-transform: scale(1.1,1.1);
+  -webkit-transform: scale(1.1,1.1);
+  box-shadow: 0px 0px 0px -2px rgba(0, 0, 0, 0.25);
+}
+
+/* 000님의 방 버튼 */
 .join_btn{
-  width: 100%;
-  height: 100%;
   font-family: 'CookieRun_Regular';
-}
+  font-size: 20px;
 
+  width: 100%;
+  height: 55px;
+  background: #003D6B;
+  overflow: hidden;
+  text-align : center;
+  transition : .2s;
+  cursor : pointer;
+  border-radius: 5px;
+  box-shadow: 0px 1px 2px rgba(0,0,0,.2);
+}
+.btnTwo {
+  position : relative;
+  width : 200px;
+  height : 100px;
+  margin-top: -100px;
+  padding-top: 2px;
+  background : #ABDBE3;
+  left : -250px;
+  transition : .3s;
+}
+.btnText {
+  color : white;
+  transition : .3s;
+  margin-top: 8px;
+}
+.btnText2 {
+  margin-top : 54px;
+  margin-right : -130px;
+  color : #003D6B;
+}
+.join_btn:hover .btnTwo{ /*When hovering over .button change .btnTwo*/
+  left: -130px;
+}
+.join_btn:hover .btnText{ /*When hovering over .button change .btnText*/
+  margin-left : 72px;
+}
+.join_btn:active { /*Clicked and held*/
+  box-shadow: 0px 5px 6px rgba(0,0,0,0.3);
+}
 
 /* button */
 .keyboard{
@@ -145,4 +260,22 @@
   width: 100px;
   margin-top: -140px;
   margin-left: 110px;
+}
+
+/* 랭킹 부분 */
+.rank_row, .rank_row_1{
+  font-family: 'CookieRun_Regular';
+  height: 40px;
+  margin-top: 10px;
+  /* border: 1px solid black; */
+}
+
+.rank_row_1{
+  color: #ffb344;
+}
+
+
+.rank_col_1{
+  /* border: 1px solid black; */
+  margin-left: 7px;
 }
